<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">LAC Tool</string>
    <string name="warning_missingLac">LAC is not installed, click to install</string>
    <string name="warning_missingPerms">Missing permissions, click to fix</string>
    <string name="info_lacNeeded">LAC Tool helps you manage LAC data. Without LAC, LAC Tool will not be useful.</string>
    <string name="info_storagePerm">Storage permission is required to manage maps &amp; wallpapers</string>
    <string name="info_storagePermSdk30">LAC Tool needs access to all files in order to access, add and manage LAC files.\nGrant all files access to LAC Tool in the next screen.</string>
    <string name="info_treePerm">LAC Tool needs access to your LAC files in order to manage them, click "use this folder" option and it will get required permissions</string>
    <string name="info_done">Done!</string>
    <string name="info_sharing">Sharing file</string>
    <string name="info_error">Something went wrong</string>
    <string name="info_wait">Please wait..</string>
    <string name="denied_alreadyExists">A file with this name already exists</string>
    <string name="denied_doesntExist">File does not exist</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_restore">Restore</string>
    <string name="action_share">Share</string>
    <string name="action_done">Done</string>
    <string name="action_back">Go back</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok" tools:keep="@string/action_ok">Okay</string>
    <string name="select">Select</string>
    <string name="manageMaps">Manage maps</string>
    <string name="manageWallpapers">Manage wallpapers</string>
    <string name="manageScreenshots">View screenshots</string>
    <string name="startLac">Start LAC</string>
    <string name="options">Options &amp; Info</string>
    <string name="checkUpdates">Check for LAC Tool updates</string>
    <string name="update_toastAvailable">Update available!</string>
    <string name="update_toastNoUpdates">No updates</string>
    <string name="updateAvailable">Update available, click to update</string>
    <string name="mapImportedMaps">Your maps</string>
    <string name="mapPick">Pick map</string>
    <string name="mapPickExternal">Pick another map</string>
    <string name="mapNoImported">No imported maps were found</string>
    <string name="mapDownload">Download a map</string>
    <string name="mapDownload_linkInput">Map link..</string>
    <string name="mapDownload_download">Download</string>
    <string name="mapDownload_notAMap">Not a map file</string>
    <string name="mapDownload_downloading">Downloading map..</string>
    <string name="mapName">Map name</string>
    <string name="mapThumbnail">Map thumbnail</string>
    <string name="mapThumbnailSet">Set thumbnail</string>
    <string name="mapThumbnailRemove">Remove thumbnail</string>
    <string name="mapImport">Import the map</string>
    <string name="mapEdit">Edit map options &amp; roles</string>
    <string name="mapShare">Share the map</string>
    <string name="mapDuplicate">Duplicate the map</string>
    <string name="mapDuplicate_name">Map name..</string>
    <string name="mapDuplicate_duplicate">Duplicate</string>
    <string name="mapBackup">Backup the map</string>
    <string name="mapDelete">Delete the map</string>
    <string name="mapDelete_question">Are you sure you want to delete this map?\n It cannot be undone!</string>
    <string name="mapMerge">Merge maps</string>
    <string name="mapMerge_notSelected">No map selected</string>
    <string name="mapMerge_baseMap">Base map</string>
    <string name="mapMerge_mapToAdd">Map to add</string>
    <string name="mapMerge_mapToAdd_pos">Position (X,Y,Z)</string>
    <string name="mapMerge_mapToAdd_includeSpawns">Include spawnpoints</string>
    <string name="mapMerge_mapToAdd_includeTdmSpawns">Include TDM spawnpoints</string>
    <string name="mapMerge_mapToAdd_includeCheckpoints">Include race checkpoints</string>
    <string name="mapMerge_output">Output</string>
    <string name="mapMerge_output_name">Map name</string>
    <string name="mapMerge_output_merge">Merge now</string>
    <string name="mapMerge_warning_noMapSelected">Please select both maps!</string>
    <string name="mapMerge_warning_posNotValid">Map to add position is not valid!\nExample: 0,0,0</string>
    <string name="mapMerge_warning_noOutputName">Please set output name!</string>
    <string name="mapEdit_serverName">Server name</string>
    <string name="mapEdit_mapType">Map type</string>
    <string name="mapEdit_type_0">white-grid</string>
    <string name="mapEdit_type_1">grass</string>
    <string name="mapEdit_type_2">snow</string>
    <string name="mapEdit_type_3">sand</string>
    <string name="mapEdit_type_4">desert</string>
    <string name="mapEdit_type_5">water</string>
    <string name="mapEdit_mapOptions">Map options</string>
    <string name="mapEdit_filterObjects">Filter objects</string>
    <string name="mapEdit_filterObjects_query">Query</string>
    <string name="mapEdit_filterObjects_exactMatch">Exact match</string>
    <string name="mapEdit_filterObjects_caseSensitive">Case sensitive</string>
    <string name="mapEdit_filterObjects_remove">Remove {COUNT} objects</string>
    <string name="mapEdit_filterObjects_removed">Removed {COUNT} objects</string>
    <string name="mapEdit_otherOptions">Other options</string>
    <string name="mapEdit_replaceOldObjects">Replace {COUNT} old objects with new ones</string>
    <string name="mapEdit_replacedOldObjects">Replaced {COUNT} objects</string>
    <string name="mapRoles">Edit map roles</string>
    <string name="mapRoles_addRole">Add role</string>
    <string name="mapRoles_roleName">Role name</string>
    <string name="mapRoles_roleColor">Role color</string>
    <string name="mapRoles_copied">Copied</string>
    <string name="mapRoles_add_noName">Role must have a name!</string>
    <string name="mapRoles_add_cantInclude">Role must not include \",\" or \":\"!</string>
    <string name="optionsLac">LAC options</string>
    <string name="optionLacDefault">Default</string>
    <string name="optionLacd">LACD (LAC BETA)</string>
    <string name="optionLacm">LACM (LAC MOD)</string>
    <string name="optionLacmb">LACMB (LAC MB)</string>
    <string name="optionsBackup">Backup options</string>
    <string name="optionAutoBackup">Auto map backups</string>
    <string name="optionBackupOnEdit">Backup maps before editing them</string>
    <string name="optionsApp">App options</string>
    <string name="optionsUseInAppFilePicker">Use in app file picker</string>
    <string name="optionAutoCheckUpdate">Automatically check for LAC Tool updates</string>
    <string name="optionDebug">Debug mode</string>
    <string name="optionChangeTheme">Change theme</string>
    <string name="optionsChangeTheme_system">Follow system</string>
    <string name="optionsChangeTheme_light">Light</string>
    <string name="optionsChangeTheme_dark">Dark</string>
    <string name="optionDeleteTemp">Delete temporary data</string>
    <string name="optionsChangelogNoChangelog">No changelog has been found, go to main menu, then check for updates to get changelog</string>
    <string name="optionsChangelogCurrent">Current version</string>
    <string name="optionsChangelogChangelog">Changelog version</string>
    <string name="optionsDiscordRcs" translatable="false">LAC Discord</string>
    <string name="optionsDiscordAliern" translatable="false">LAC Tool Discord</string>
    <string name="optionsGithub" translatable="false">LAC Tool GitHub</string>
    <string name="optionsFeedback">LAC Tool feedback</string>
    <string name="optionsFeedbackHint">Your feedback..</string>
    <string name="optionsExperimental">Experimental options</string>
    <string name="optionsExperimentalHint">Do not change experimental options if you do not know what they do!</string>
    <string name="optionsStartActivity">Start activity with name</string>
    <string name="optionsUriSdkVersion">URI SDK version (30 by default)</string>
    <string name="optionsUpdateUrl">Update URL</string>
    <string name="optionsForceFdroid">Force -fdroid suffix</string>
    <string name="backupManage">Manage backups</string>
    <string name="wallpaperPick">Pick wallpaper</string>
    <string name="wallpaperImport">Import the wallpaper</string>
    <string name="wallpaperPickedWallpaper">Picked wallpaper</string>
    <string name="wallpaperCopyUrl">Copy import URL</string>
    <string name="wallpaperDesc">To import a wallpaper in LAC 1.5.6 or above, copy import URL of a wallpaper and paste it in the in game cellphone settings.\nOn older versions just click custom wallpaper option in cellphone.</string>
    <string name="galleryNoScreenshots">No screenshots to show</string>
    <string name="filePicker_title">Pick a file</string>
    <string name="filePicker_folder">Folder</string>
    <string name="filePicker_goParent">Parent directory..</string>
    <string name="filePicker_notValid">This file type is not valid</string>
</resources>