<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?lactool_background">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:background="#00000000">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/mapsOptions_collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?lactool_linear"
            app:expandedTitleGravity="center"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="@string/mapEdit"
            app:toolbarId="@+id/mapsOptions_toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/mapsOptions_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationContentDescription="@string/action_back"
                app:navigationIcon="?attr/homeAsUpIndicator" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mapsOptions_nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:id="@+id/mapsOptions_serverName_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="?lactool_linearDrawable"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/mapEdit_serverName"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/mapsOptions_serverName_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints="false"
                    android:background="?lactool_linearButtonDrawable"
                    android:ems="10"
                    android:hint="@string/mapEdit_serverName"
                    android:inputType="textNoSuggestions"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="?lactool_hint"
                    android:textStyle="bold"
                    tools:ignore="DuplicateSpeakableTextCheck" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mapsOptions_mapType_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="?lactool_linearDrawable"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/mapEdit_mapType"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/mapsOptions_mapType_change"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="?lactool_linearButtonDrawable"
                    android:gravity="start|center_vertical"
                    android:text="@string/mapEdit_mapType"
                    android:textAllCaps="false"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold"
                    app:backgroundTint="?lactool_button"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mapsOptions_options_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="?lactool_linearDrawable"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/mapEdit_mapOptions"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:animateLayoutChanges="true"
                android:background="?lactool_linearDrawable"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/mapEdit_filterObjects"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/mapsOptions_filterObjects_query"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:autofillHints="false"
                    android:background="?lactool_linearButtonDrawable"
                    android:hint="@string/mapEdit_filterObjects_query"
                    android:inputType="textNoSuggestions"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="?lactool_hint"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/mapsOptions_filterObjects_suggestions"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </HorizontalScrollView>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/mapsOptions_filterObjects_caseSensitive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:paddingVertical="8dp"
                    android:text="@string/mapEdit_filterObjects_caseSensitive"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold">
                </com.google.android.material.switchmaterial.SwitchMaterial>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/mapsOptions_filterObjects_exactMatch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:paddingVertical="8dp"
                    android:text="@string/mapEdit_filterObjects_exactMatch"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold">
                </com.google.android.material.switchmaterial.SwitchMaterial>

                <Button
                    android:id="@+id/mapsOptions_filterObjects_remove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="?lactool_linearRedDrawable"
                    android:padding="8dp"
                    android:text="@string/mapEdit_filterObjects_remove"
                    android:textColor="?lactool_textOnRed"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:backgroundTint="?lactool_red"
                    tools:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mapsOptions_otherOptions_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:animateLayoutChanges="true"
                android:background="?lactool_linearDrawable"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/mapEdit_otherOptions"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/mapsOptions_roles_editRoles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="?lactool_linearButtonDrawable"
                    android:padding="8dp"
                    android:text="@string/mapRoles"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:backgroundTint="?lactool_button"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/mapsOptions_replaceOldObjects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="?lactool_linearBlueDrawable"
                    android:padding="8dp"
                    android:text="@string/mapEdit_replaceOldObjects"
                    android:textAllCaps="false"
                    android:textColor="?lactool_textOnRed"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:backgroundTint="?lactool_blue"
                    tools:visibility="visible" />

            </LinearLayout>

            <TextView
                android:id="@+id/mapsOptions_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mapsOptions_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/action_save"
        android:src="@drawable/save"
        app:backgroundTint="?lactool_blue" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>